<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/etEmailR"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:id="@+id/tvUsernameR"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/username" />

        <EditText
            android:id="@+id/etUsernameR"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:hint="@string/username"
            android:inputType="textPersonName"
            tools:ignore="TouchTargetSizeCheck"
            android:importantForAutofill="no" />

        <TextView
            android:id="@+id/tvPasswordR"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/password" />

        <EditText
            android:id="@+id/etPasswordR"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            tools:ignore="TouchTargetSizeCheck"
            android:importantForAutofill="no" />

        <TextView
            android:id="@+id/tvEmailR"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/email" />

        <EditText
            android:id="@+id/editTextTextEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            tools:ignore="TouchTargetSizeCheck"
            android:importantForAutofill="no" />

        <TextView
            android:id="@+id/tvNamaR"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/nama_lengkap" />

        <EditText
            android:id="@+id/etNamaR"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:hint="@string/nama_lengkap"
            android:inputType="textPersonName"
            tools:ignore="TouchTargetSizeCheck"
            android:importantForAutofill="no" />

        <TextView
            android:id="@+id/tvAsalR"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/asal_sekolah" />

        <EditText
            android:id="@+id/etAsalR"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:hint="@string/asal_sekolah"
            android:inputType="textPersonName"
            tools:ignore="TouchTargetSizeCheck"
            android:importantForAutofill="no" />

        <TextView
            android:id="@+id/tvAlamatR"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/alamat_tinggal" />

        <EditText
            android:id="@+id/etAlamatR"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:hint="@string/alamat_tinggal"
            android:inputType="textMultiLine"
            tools:ignore="TouchTargetSizeCheck"
            android:importantForAutofill="no" />

        <Button
            android:id="@+id/bSimpan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/simpan" />
    </LinearLayout>

</ScrollView>